WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55269
[chromium] Fall back to texSubImage2D when mapTexSubImage2D fails in VideoLayerChromium
https://bugs.webkit.org/show_bug.cgi?id=55269
Summary
[chromium] Fall back to texSubImage2D when mapTexSubImage2D fails in VideoLay...
Victoria Kirst
Reported
2011-02-25 15:10:33 PST
[chromium] Fall back to texSubImage2D when mapTexSubImage2D fails in VideoLayerChromium
Attachments
Patch
(2.05 KB, patch)
2011-02-25 15:13 PST
,
Victoria Kirst
no flags
Details
Formatted Diff
Diff
Patch
(2.03 KB, patch)
2011-02-28 13:33 PST
,
Victoria Kirst
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Victoria Kirst
Comment 1
2011-02-25 15:13:03 PST
Created
attachment 83887
[details]
Patch
Victoria Kirst
Comment 2
2011-02-25 15:18:56 PST
This fix will enable <videos> to be painted in DRT with GPU-acceleration turned on.
Kenneth Russell
Comment 3
2011-02-28 13:07:42 PST
Comment on
attachment 83887
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=83887&action=review
> Source/WebCore/platform/graphics/chromium/VideoLayerChromium.cpp:224 > + GLC(context, context->texSubImage2D(GraphicsContext3D::TEXTURE_2D, 0, 0, 0, dimensions.width(), dimensions.height(), GraphicsContext3D::LUMINANCE, GraphicsContext3D::UNSIGNED_BYTE, data));
Should this use the incoming argument "format" instead of GraphicsContext3D::LUMINANCE directly?
Victoria Kirst
Comment 4
2011-02-28 13:33:09 PST
Created
attachment 84108
[details]
Patch
Victoria Kirst
Comment 5
2011-02-28 13:34:09 PST
(In reply to
comment #3
)
> Should this use the incoming argument "format" instead of GraphicsContext3D::LUMINANCE directly?
Yes! Thanks for the catch. Fixed in my uploaded patch.
Kenneth Russell
Comment 6
2011-02-28 13:41:20 PST
Comment on
attachment 84108
[details]
Patch Looks good.
WebKit Commit Bot
Comment 7
2011-02-28 15:36:09 PST
Comment on
attachment 84108
[details]
Patch Clearing flags on attachment: 84108 Committed
r79935
: <
http://trac.webkit.org/changeset/79935
>
WebKit Commit Bot
Comment 8
2011-02-28 15:36:14 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug