2011-02-28  Victoria Kirst  <vrk@google.com>

Reviewed by Kenneth Russell.

        [chromium] Fall back to texSubImage2D when mapTexSubImage2D fails in VideoLayerChromium
        https://bugs.webkit.org/show_bug.cgi?id=55269

        Mesa does not support mapTexSubImage2D, so this change lets
        GPU-accelerated video work with DRT layout tests.

        * platform/graphics/chromium/VideoLayerChromium.cpp:
        (WebCore::VideoLayerChromium::updateTexture):

Canonical link: https://commits.webkit.org/69832@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79935 268f45cc-cd09-0410-ab3c-d52691b4dbfc